--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         }
     @font-face {
         font-family: Condor-Regular-Bold;
-        src: url('/fonts/Condor-Bold.woff2');
+        src: url('./fonts/Condor-Bold.woff2');
         }
       @font-face{
         font-family: IKANSEEYOUALLTrial-AllOfYou;
-        src: url('/fonts/IKANSEEYOUALL.woff2');
+        src: url('./fonts/IKANSEEYOUALL.woff2');
         }
       @font-face{
         font-family: KRSNATrial-Medium;
-        src: url('/fonts/KRSNATrial-Medium.woff2');
+        src: url('./fonts/KRSNATrial-Medium.woff2');
       }
       @font-face{
       font-family:StolzlDisplay-Bold;
-        src: url('/fonts/Stolzl/Stolzl Display Bold.otf');
+        src: url('./fonts/Stolzl/Stolzl Display Bold.otf');
       }
       @font-face{
       font-family:CourierNewPS-BoldMT;
-      src: url('/fonts/CourierNewPS-BoldMT.ttf');
+      src: url('./fonts/CourierNewPS-BoldMT.ttf');
       }
       @font-face{
       font-family:CourierNewPSMT;
-      src: url('/fonts/CourierNewPSMT.ttf');
+      src: url('./fonts/CourierNewPSMT.ttf');
       }
       @font-face{
       font-family:Arial-BoldMT;
-      src: url('/fonts/Arial-BoldMT.ttf');
+      src: url('./fonts/Arial-BoldMT.ttf');
       }
       div{
           margin:0 auto;
