--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
     @font-face {
         font-family: Canterbury;
-        src: url('https://github.com/traysiMay/portfolio/blob/master/fonts/Canterbury.ttf');
+        src: url('./fonts/Canterbury.ttf');
         }
     @font-face {
         font-family: Condor-Regular-Bold;
