--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <body>
     <head>
+            <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+            <link rel="shortcut icon" href="./favi4.ico"/>
 
         <style>
-
+#header_nav, #mob_nav {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
     .button{
         cursor:pointer;
     }
