--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <head>
             <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-            <link rel="shortcut icon" href="./favi4.ico"/>
+            <link rel="shortcut icon" href="./favi.ico"/>
 
         <style>
 #header_nav, #mob_nav {
