--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
     <head>
-            <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-            <link rel="shortcut icon" href="./favi.ico"/>
+            <link rel="shortcut icon" type="image/x-icon" href="./favi.ico">
 
         <style>
 #header_nav, #mob_nav {
