--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<body>
     <head>
             <link rel="shortcut icon" type="image/x-icon" href="./favi.ico">
 
@@ -57,6 +56,9 @@
           margin:0 auto;
       }
       </style>
+      </head>
+      <body>
+
 <div>
 <!-- <svg id="header_nav" viewBox="0 0 1400 178.876" xml:space="preserve">
             </svg> -->
