--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <title>ariel.klevecz</title>
             <link rel="shortcut icon" type="image/x-icon" href="./favi.ico">
 
         <style>
